2009-06-24  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.setup-fails-on-ts): Fix another typo.

2009-06-24  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.setup-fails-on-ts): Fix typo.

2009-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.setup-failes-on-ts): Change rebaseall to
	rebase.

2009-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.setup-failes-on-ts): New FAQ entry.

2009-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7-misc): Add new link libs.
	* setup2.sgml (setup-locale-ov): Explain locale-specific wcwidth
	feature.

2009-06-12  Ken Brown  <kbrown@cornell.edu>

	* faq-using.xml (faq.using.emacs): Update.

2009-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Add changes to console BS and Space key.

2009-05-26  Christopher Faylor  <me+cygwin@cgf.cx>

	Change explicitely to explicitly throughout.

2009-05-15  Corinna Vinschen  <corinna@vinschen.de>

	* setup2.sgml (setup-locale-console): Disable section for now.

2009-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml (faq.setup.upgrade-mountpoints): New entry.
	* faq-using.xml (faq.using.directory-structure): Align example to
	latest mount output.
	* pathnames.sgml (mount-table): Add note about upgrade helper scripts
	to create /etc/fstab and /etc/fstab.f/${USER}.

2009-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Add automounting of /, /usr/bin, and /usr/lib.
	* pathnames.sgml (pathnames-intro): Be more verbose about POSIX and
	Win32 paths.
	(mount-table): Add "auto" flag.  Add a paragraph about /usr/bin and
	/usr/lib.
	(pathnames-mount-ex): Enhance flags output.

2009-05-13  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <me+cygwin@cgf.cx>

	* pathnames.sgml (mount-table): Sort mount options and add override
	option.  Add description of root mount handling.
